--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Homesreet Blog</h1>
+    <h1>Homestreet Blog</h1>
     <nav>
       <a href="../index.html">Home</a>
       <a href="about.html">About</a>
