--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   }
 </script>
 <script>
-  const menuBtn = document.querySelector(".menu-toggle");
+  const menuBtn = document.querySelector(".menu-btn");
   const sidebar = document.querySelector(".sidebar-nav");
 
   menuBtn.addEventListener("click", function () {
